'ML_file' in Isabelle2013.  Minor INCOMPATIBILITY.

* Updated and extended "isar-ref" and "implementation" manual,
eliminated old "ref" manual.

* Proper diagnostic command 'print_state'.  Old 'pr' (with its
implicit change of some global references) is retained for now as
control command, e.g. for ProofGeneral 3.7.x.


*** Prover IDE -- Isabelle/Scala/jEdit ***

* Dockable window "Timing" provides an overview of relevant command
timing information.

* Option to skip over proofs, using implicit 'sorry' internally.


*** Pure ***

* Syntax translation functions (print_translation etc.) always depend
on Proof.context.  Discontinued former "(advanced)" option -- this is
now the default.  Minor INCOMPATIBILITY.

* Target-sensitive commands 'interpretation' and 'sublocale'.
Particulary, 'interpretation' now allows for non-persistent
interpretation within "context ... begin ... end" blocks.
See "isar-ref" manual for details.

* Improved locales diagnostic command 'print_dependencies'.

* Discontinued obsolete 'axioms' command, which has been marked as
legacy since Isabelle2009-2.  INCOMPATIBILITY, use 'axiomatization'
instead, while observing its uniform scope for polymorphism.

* Discontinued empty name bindings in 'axiomatization'.
INCOMPATIBILITY.


*** HOL ***

* Code generator:
  * 'code_printing' unifies 'code_const' / 'code_type' / 'code_class' / 'code_instance'.
  * 'code_identifier' declares name hints for arbitrary identifiers in generated code,
    subsuming 'code_modulename'.
  See the Isar reference manual for syntax diagrams, and the HOL theories for examples.

* Library/Polynomial.thy:
  * Use lifting for primitive definitions.
  * Explicit conversions from and to lists of coefficients, used for generated code.
  * Replaced recursion operator poly_rec by fold_coeffs.
  * Prefer pre-existing gcd operation for gcd.
  * Fact renames:
    poly_eq_iff ~> poly_eq_poly_eq_iff
    poly_ext ~> poly_eqI
    expand_poly_eq ~> poly_eq_iff
IMCOMPATIBILTIY.
