@@ -12,6 +12,7 @@ declare -a SOURCES=(
   "src/dockable.scala"
   "src/document_model.scala"
   "src/document_view.scala"
+  "src/documentation_dockable.scala"
   "src/fold_handling.scala"
   "src/graphview_dockable.scala"
   "src/html_panel.scala"
