@@ -17,6 +17,11 @@
 			wm.addDockableWindow("isabelle-syslog");
 		</CODE>
 	</ACTION>
+	<ACTION NAME="isabelle.documentation-panel">
+		<CODE>
+			wm.addDockableWindow("isabelle-documentation");
+		</CODE>
+	</ACTION>
 	<ACTION NAME="isabelle.readme-panel">
 		<CODE>
 			wm.addDockableWindow("isabelle-readme");
