@@ -11,6 +11,9 @@
 	<DOCKABLE NAME="isabelle-syslog" MOVABLE="TRUE">
 		new isabelle.jedit.Syslog_Dockable(view, position);
 	</DOCKABLE>
+	<DOCKABLE NAME="isabelle-documentation" MOVABLE="TRUE">
+		new isabelle.jedit.Documentation_Dockable(view, position);
+	</DOCKABLE>
 	<DOCKABLE NAME="isabelle-readme" MOVABLE="TRUE">
 		new isabelle.jedit.README_Dockable(view, position);
 	</DOCKABLE>
